# portfolio-backend

./: .env.example  .gitignore  Dockerfile  PRE_FLIGHT_CHECKLIST.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  railway.toml  render.yaml  test_apis.sh  test_new_apis.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_profile_table.py  003_add_contact_messages.py  004_skills_to_jsonb.py  005_site_copy_fields.py  006_add_education_certs_experience.py  007_add_description_points_and_headings.py  008_add_chatbot_queries_and_profile_questions.py  009_add_image_urls.py
app/: __init__.py  main.py
app/core/: auth.py  cache.py  config.py  database.py  email.py  logging.py  middleware.py
app/models/: __init__.py  analytics.py  blog_post.py  certificate.py  chatbot_query.py  contact_message.py  dashboard_metrics.py  education.py  experience.py  lab_experiment.py  profile.py  project.py  system_design.py
app/routers/: auth.py  blog.py  certificates.py  chatbot.py  contact.py  dashboard.py  education.py  experience.py  health.py  lab.py  profile.py  projects.py  system_designs.py  uploads.py
app/schemas/: __init__.py  analytics.py  auth.py  blog_post.py  certificate.py  chatbot.py  contact.py  dashboard.py  education.py  experience.py  lab_experiment.py  profile.py  project.py  system_design.py
app/services/: analytics.py  cache.py  chatbot.py  cloudinary_service.py  database.py
tests/: conftest.py  test_analytics.py  test_auth.py  test_cache.py  test_chatbot.py  test_health.py  test_schemas.py
