[tool.poetry]
name = "portfolio-backend"
version = "1.0.0"
description = "AI Backend Engineer Portfolio - FastAPI Backend"
authors = ["Portfolio Owner"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.104.1"
uvicorn = {extras = ["standard"], version = "0.24.0"}
pydantic = "2.5.3"
pydantic-settings = "2.1.0"
sqlalchemy = "2.0.23"
alembic = "1.12.1"
asyncpg = "0.29.0"
redis = "5.0.1"
structlog = "23.2.0"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
google-generativeai = "0.3.2"
openai = "1.3.9"
PyGithub = "2.1.1"
httpx = "0.25.2"
cloudinary = "1.36.0"
python-multipart = "0.0.6"
python-dotenv = "1.0.0"
pyyaml = "6.0.1"
bleach = "6.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
pytest-asyncio = "0.21.1"
pytest-cov = "4.1.0"
hypothesis = "6.92.1"
faker = "20.1.0"
respx = "0.20.2"
black = "23.12.0"
ruff = "0.1.8"
mypy = "1.7.1"
pre-commit = "3.6.0"
httpx = "0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"
